# apple-mail-mcp

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LIVE_FIELD_REPORT_2026-06-04.md  README.md  apple-mail-mcp-v3.2.1.textClipping  pyproject.toml  server.json  skills-lock.json
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: CLAUDE.md  marketplace.json
.claude/hooks/: check_applescript_compiles.py  dev_mode_reminder.sh  post_edit_check.sh  session_context.sh  wrap_up_reminder.sh
.claude/skills/: context-guidance-audit  mail-scripting-dictionary
.codex/: hooks.json  migrate-to-codex-report.txt
.codex/environments/: environment.toml
.codex/hooks/: dev_mode_reminder.sh  session_context.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.github/workflows-disabled/: ci.yml.backup-2026-07-15
apple-mail-mcpb/: CLAUDE.md  build-mcpb.sh  manifest.json
distribution/: marketplace-payload.json
docs/: AGENT_LIVE_TESTING.md  CLAUDE-conventions.md  CLAUDE.md  findings-allow-full-scan-audit-2026-06-09.md
docs/live-testing-reports/: LIVE_FIELD_REPORT_2026-06-04.md
goals/: 2026-06-19-mail-scripting-audit-goal.md
plugin/: .mcp.json  mcp.json  requirements.in  requirements.txt  start_mcp.sh
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/.cursor-plugin/: plugin.json
plugin/apple_mail_mcp/: CLAUDE.md  __init__.py  __main__.py  applescript_snippets.py  bounded_scan.py  cli.py  constants.py  core.py  metadata_index_contract.py  server.py
plugin/docs/: CLAUDE.md  commands.md
plugin/skills/: CLAUDE.md
plugin/ui/: dashboard.py
plugin/wheelhouse/: caio-0.9.25-cp313-cp313-macosx_10_13_universal2.whl  cyclopts-4.21.0-py3-none-any.whl  fastmcp-3.4.1-py3-none-any.whl  fastmcp_slim-3.4.1-py3-none-any.whl  joserfc-1.7.3-py3-none-any.whl  mcp_ui_server-1.0.0-py3-none-any.whl  rich_rst-2.1.0-py3-none-any.whl  rpds_py-2026.6.3-cp313-cp313-macosx_11_0_arm64.whl  websockets-16.1-cp313-cp313-macosx_11_0_arm64.whl
provenance/: source-release-policy.json  source-release.allowed_signers
tasks/: CLAUDE.md  INDEX.md  agent-guidance-audit-2026-06-30.md  draft-verification-simplification-recommendations-2026-06-26.md  id-first-refactor-spec.md  id-first-search-retirement-completion-audit-2026-06-29.md  id-first-search-retirement-decision-brief-2026-06-29.md  id-first-search-retirement-recommendations-2026-06-29.md  id-first-search-retirement-todo-2026-06-29.md  issue-draft-attachment-verification-gap-2026-06-25.md  issue-find-draft-by-in-reply-to-2026-06-24.md  issue-manage-drafts-list-timeout-2026-06-24.md  issue-reply-signature-not-applied-2026-06-25.md  issue-reply-to-email-return-draft-id-2026-06-24.md  live-test-baseline-2026-05-21.md  mcp-mailbox-timeout-audit-2026-05-22.md  metadata-index-feasibility-spike-2026-06-30.md  native-reply-formatting-investigation-2026-06-30.md  native-reply-probes-2026-06-30.md  phase-plan-3.1.7.md  reply-draft-pr38-review-findings-2026-06-30.md  robustness-backlog-2026-05-22.md  robustness-completion-audit-2026-05-22.md  scalability-24k-hardening-2026-05-22.md  todo.md
tasks/archive/: README.md
tasks/cleanup-docs-and-simplify-2026-06-08/: progress-log.md
tasks/codex-claude-plugin-setup-2026-06-07/: learnings-and-parking-lot.md  progress-log.md
tasks/codex-mcp-tool-registration-incident-2026-06-08/: issue-summary.md  native-reply-and-draft-lifecycle-issue.md  progress-log.md
tasks/draft-verification-simplification-research-2026-06-26/: 05-persisted-drafts-live-smoke.md  06-active-doc-tool-count-validation.md
tasks/reference/: apple-mail-plugin-robustness-goal-2026-05-22.md  id-first-refactor-spec.md  live-test-baseline-2026-05-21.md  mcp-mailbox-timeout-audit-2026-05-22.md  phase-3-annotation-matrix.md  phase-plan-3.1.7.md  roadmap-2026-07-10.md  robustness-backlog-2026-05-22.md
tasks/v4-performance-consolidation-2026-05-27/: learnings-and-parking-lot.md  phase-plan.md  progress-log.md
tasks/whose-elimination-2026-05-22/: 00-FINAL-SYNTHESIS.md  01-envelope-index-research.md  04-agent-strategy.md  05-codebase-whose-map.md
tests/: CLAUDE.md  conftest.py  test_analytics_resource_safety.py  test_applescript_builders_compile.py  test_applescript_script_idioms.py  test_applescript_snippets.py  test_bounded_scan_contract.py  test_cli.py  test_cli_perf.py  test_compare_perf_results.py  test_compose_none_handling.py  test_compose_security.py  test_compose_tools.py  test_contracts_search_tools.py  test_contracts_smart_inbox.py  test_dashboard_id_first.py  test_draft_verification_helpers.py  test_full_inbox_export.py  test_get_statistics_json.py  test_gmail_unread_crash_regression.py  test_id_first_guidance.py  test_inbox_tools.py  test_inspect_envelope_index_schema.py  test_mail_search_tools.py  test_manage_bulk_action_errors.py  test_measure_metadata_hydration.py  test_modernization_3_1_5.py  test_module_line_budget.py  test_no_unbounded_whose.py  test_packaged_skill_paths.py  test_perf_budget.py  test_phase_2_scan_hardening.py  test_phase_a_fixes.py  test_read_only_registry.py  test_refresh_local_plugins.py  test_replied_detection.py  test_scalability_24k.py  test_search_escaping.py  test_smart_inbox_json.py  test_tasks_layout.py  (+4 more)
tests/analytics/: __init__.py  test_analytics_resource_safety.py  test_dashboard_id_first.py  test_dashboard_reply_state.py  test_export.py  test_full_inbox_export.py
tests/calendar_surface/: conftest.py  test_availability.py  test_batch_create.py  test_calendar_date_block.py  test_calendar_engine.py  test_calendar_gating.py  test_calendar_records.py  test_calendar_recurrence.py  test_calendar_scripts.py  test_calendar_validation.py  test_calendar_window.py  test_create_event.py  (+7 more)
tools/: CLAUDE.md  build-artifacts.sh  check_module_line_budget.py  check_wrapper_surface.py  dev-check.sh  inspect_envelope_index_schema.py  marketplace_identity.json  marketplace_payload.py  mcp_tool_smoke.py  pre-commit-validate.sh  refresh-local-plugins.sh  validate-codex-plugin.sh  validate_manifests.py  validate_manifests.sh
(+361 files in other folders)
