[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-apple-mail"
version = "3.11.5"
description = "MCP server giving AI assistants full access to Apple Mail - read, search, compose, organize & analyze emails"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentic Assets" },
]
keywords = [
    "mcp",
    "mcp-server",
    "apple-mail",
    "email",
    "ai",
    "claude",
    "automation",
    "macos",
    "applescript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "fastmcp==3.4.1",
    "mcp-ui-server==1.0.0",
]

[project.scripts]
mcp-apple-mail = "apple_mail_mcp.__main__:main"
apple-mail = "apple_mail_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Agentic-Assets/apple-mail-mcp"
Repository = "https://github.com/Agentic-Assets/apple-mail-mcp"
Issues = "https://github.com/Agentic-Assets/apple-mail-mcp/issues"
Changelog = "https://github.com/Agentic-Assets/apple-mail-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["plugin/apple_mail_mcp", "plugin/ui"]

[tool.hatch.build.targets.sdist]
include = ["plugin/apple_mail_mcp/**"]

# ---------------------------------------------------------------------------
# Dev dependency group (PEP 735 via hatch; also works with `uv sync --group dev`)
# Using [project.optional-dependencies] for broadest pip compatibility (pip 21+
# supports `pip install -e ".[dev]"`; PEP 735 dependency-groups require pip 24.1+
# and are not yet stable across all tools in the ecosystem this repo targets).
# ---------------------------------------------------------------------------
[project.optional-dependencies]
# Optional EventKit read fast path for the calendar tools (macOS only; the
# AppleScript engine works without it). Install: pip install 'mcp-apple-mail[eventkit]'
eventkit = [
    "pyobjc-framework-EventKit>=10,<13",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "jsonschema>=4.22.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".venv",
    "apple-mail-mcpb",
    "plugin/venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "PTH"]
# E402: module-level import not at top — analytics.py intentionally sets up
#       logging before local imports; tests/test_validate_manifests.py uses
#       sys.path manipulation. Suppress globally; revisit per-file below.
# E501: embedded AppleScript/docstring literals intentionally keep source
#       structure; ruff format owns ordinary wrapping.
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports are intentional; UI import is a try/except guard.
"plugin/apple_mail_mcp/__init__.py" = ["F401"]
# compose.py imports server twice (public alias for tests); long tool docstrings.
"plugin/apple_mail_mcp/tools/compose.py" = ["F401"]
# tests: allow unused imports (fixtures, side-effect imports), longer lines.
"tests/*" = ["F401", "F811"]

# ---------------------------------------------------------------------------
# Mypy — strict package gate
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict = true
# Do not type-check test suite or the mcpb bundle
exclude = ["tests/", "apple-mail-mcpb/", "plugin/venv/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Coverage is opt-in: pytest --cov=plugin/apple_mail_mcp --cov-report=term-missing
